<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="#550000FF"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30dp" />


    <TextView
        android:id="@+id/textViewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/id"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:text="@string/is_manager"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="82dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/textViewID"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextID"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/textViewName"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewID"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:text="@string/full_name"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="33dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextName"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="218dp"
        android:layout_toEndOf="@+id/textView4"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="150dp"
        android:backgroundTint="#550000FF"
        android:text="@string/add"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="422dp"
        android:layout_below="@+id/button"
        android:layout_marginTop="18dp" />

</RelativeLayout>
